--- a/ToMaZo/ext/src/page_action/page_action.html
+++ b/ToMaZo/ext/src/page_action/page_action.html
@@ -12,6 +12,6 @@
 </style>
 
 <div id="mainPopup">
-<h1>Hello extensionizr!</h1>
-<p>To shut this popup down, edit the manifest file and remove the "default popup" key. To edit it, just edit ext/page_action/page_action.html. The CSS is there, too.</p>
+<h1>ToMaZo!</h1>
+<p>We'll warn you when your coupon code doesn't seem to be active :)</p>
 </div>
